--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,6 @@
+/* css untuk tampilan index atau halaman home  yang pertama kali tampil pada saat website dibuka */
+
+
 /* General Styles */
 body {
     font-family: Arial, sans-serif;
