--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -1,161 +1,96 @@
 
-.container {
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-}
-
-.left-section {
-    flex: 1;
-}
-
-.right-section {
-    flex: 1;
-    margin-left: 20px;
-}
-
-.product-images img {
-    max-width: 100%;
-}
-
-.product-info h1 {
-    font-size: 24px;
-    margin: 10px 0;
-}
-
-.product-info .price {
-    font-size: 20px;
-    color: red;
-}
-
-.product-info .original-price {
-    text-decoration: line-through;
-    color: grey;
-    margin-left: 10px;
-}
-
-.product-info .discount {
-    color: green;
-    margin-left: 10px;
-}
-
-.product-info .availability {
-    margin: 10px 0;
-}
-
-.product-info .variations,
-.product-info .size {
-    margin: 10px 0;
-}
-
-.actions {
-    display: flex;
-    align-items: center;
-    margin-top: 20px;
-}
-
-.product-info .add-to-cart,
-.product-info .favorite {
-    border: none;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 0.3s;
-    height: 40px;
+/* pembungkus dari logo untuk mengatur wilayah dari logo dan tulisan serta tombol */
+.emptylogoshield{
+    width: 200px;
+    display: inline-block;
+    margin: 10px auto;
+    width: 300px;
     text-align: center;
+    /* background-color: greenyellow; */
+}
+
+/* logo yang yang tampil jika isi tas kosong */
+.emptylogo{
+    width: 200px;
+    display: inline-block;
+    margin-bottom: 30px;
+    /* margin: 30px auto; */
+}
+
+/* notif dari jumlah barang yang ada di keranjang dan wishlist */
+.notifsum{
+    display: inline-block;
+    background-color: red;
     text-decoration: none;
+    line-height: 20px;
+    text-align: center;
+    width: 20px;
+    height: 20px;
     color: white;
-    padding: 10px 20px;
-    background-color: #000000;
+    font-size: 10px;
+    border-radius: 10px;
 }
 
-.product-info .add-to-cart:hover,
-.product-info .favorite:hover {
-    background-color: #494642;
+/* tambahan wishlist dan temannya */
+.cardlist{
+    text-align: right;
+    background-color: bisque;
+    padding: 10px;
+    margin: 10px;
 }
 
-.product-info .favorite {
-    background-color: transparent;
-    border: 2px solid black;
+.hapus{
+    text-decoration: none;
+    font-weight: bolder;
     color: black;
-    padding: 0;
-    width: 40px;
-    height: 40px;
-    margin-left: 10px; /* Add space from add-to-cart */
-    align-items: center;
-    justify-content: center;
+}
+.hapus:hover{
+    font-size: 18px;
 }
 
-.product-info .favorite:hover {
-    background-color: black;
-    color: white;
+.hades{
+    text-align: left;
 }
 
-.product-info .favorite i {
-    color: inherit;
+
+/* bagian rekomendasi untuk bag, wishlist, home, dan detail */
+.recomendedshield{
+    background-color: gray;
 }
 
-.product-description h2 {
-    margin: 10px 0;
-}
-
-.product-description p {
-    margin: 5px 0;
-}
-
-.product-description h3 {
-    margin: 20px 0 10px 0;
-}
-
-.rating {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-.rating .fa-star {
-    color: grey;
-    margin-right: 5px;
+.linkwish{
+    transition: background-color .3s, color .2s;
+    color: #fff;
+    background-color: #000;
+    border: 1px solid #000;
+    text-transform: uppercase;
+    display: inline-block;
+    padding: 20px;
+    font-size: 12px;
+    line-height: 10px;
+    width: 260px;
+    text-align: center;
+    white-space: nowrap;
     cursor: pointer;
-    transition: color 0.2s;
+    background-image: none;
+    letter-spacing: 1px;
+    border-radius: 12px;
 }
 
-.rating .fa-star:hover,
-.rating .fa-star.hover {
-    color: gold;
+.linkwish:hover{
+    background-color: white;
+    color: black;
 }
 
-.rating .fa-star.selected {
-    color: gold;
-}
-
-.rating p {
-    margin-left: 10px;
-}
-
-.payment-method {
-    margin-top: 20px;
-}
-
-.payment-method h2 {
-    margin-top: 0;
-}
-
-.payment-method ul {
-    list-style: none;
-    padding: 0;
-}
-
-.payment-method ul li {
+.ukuranwish{
+    width: 260px;
+    font-size: 15px;
+    padding: 5px;
+    margin-top: 10px;
     margin-bottom: 10px;
 }
 
-.payment-method ul li i {
-    margin-right: 10px;
+.ukuranwish:focus{
+    border: 1px solid rgb(0, 184, 184);
 }
 
-.payment-method ul li i:before {
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-}
