--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -176,30 +176,33 @@ body{
     width: 200px;
 }
 
-#linkk{
+.linkk{
     display: inline-block;
     font-weight: 100;
     font-size: small;
     background-color: black;
-    padding: 0px 20px;
-    border-radius: 10px;
+    padding: 0px 30px;
+    border-radius: 15px;
+    height: 50px;
+    line-height: 50px;
     border: 1px solid black;
     color: white;
     text-decoration: none;
+    margin-top: 20px;
 
 }
-#linkk:hover{
+.linkk:hover{
     background-color: white;
     color: black;
 }
 
-#padpad #bold{
+.bold{
     display: block;
     text-align: center;
     height: 20px;
     font-weight: bold;
 }
-#padpad #thin{
+.thin{
     display: block;
     text-align: center;
     font-weight: 100;
