wish,rekomen,bag,alamat

--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -34,7 +34,8 @@
 /* tambahan wishlist dan temannya */
 .cardlist{
     text-align: right;
-    background-color: bisque;
+    background-color: white;
+    border-radius: 10px;
     padding: 10px;
     margin: 10px;
 }
@@ -94,3 +95,18 @@
     border: 1px solid rgb(0, 184, 184);
 }
 
+.blk{
+    display: block;
+    width: 100%;
+}
+
+.blk1{
+    display: block;
+    width: 800px;
+}
+
+.gray{
+    border-radius: 10px;
+    background-color: rgb(250, 250, 250);
+    padding: 20px;
+}
