--- a/public/css/card.css
+++ b/public/css/card.css
@@ -8,6 +8,13 @@
     margin: 0px auto;
     /* background-color: aqua; */
 }
+.main1{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0px auto;
+    /* background-color: aqua; */
+}
 
 .filterside{
     text-align: center;
@@ -119,6 +126,7 @@
     font-size: 12px;
     line-height: 10px;
     width: 300px;
+    text-decoration: none;
     text-align: center;
     white-space: nowrap;
     vertical-align: middle;
@@ -150,4 +158,6 @@
     letter-spacing: 1px;
     border-radius: 12px;
 }
+
+
 
