--- a/public/css/card.css
+++ b/public/css/card.css
@@ -101,10 +101,10 @@
 .logshield{
     /* background-color: aqua; */
     display: inline-block;
-    line-height: 20px;
+    /* line-height: 20px; */
     border-radius: 10px;
     border: 1px solid black;
-    padding: 10px;
+    padding: 5px;
 }
 
 .loggo{
