--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -25,6 +25,14 @@
 
 }
 
+.flextengah{
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+    width: 72%;
+}
+
 .price{
     font-size: 16px;
     font-weight: bold;
